--- a/solutionrot13/templates/signup-form.html
+++ b/solutionrot13/templates/signup-form.html
@@ -10,7 +10,8 @@
 
   </head>
  <!--5
- multiple string substitions and posts
+ multiple template variables and posts names to be used
+ by blog.py
   -->
   <body>
     <h2>Signup</h2>
