--- a/solutionrot13/templates/welcome.html
+++ b/solutionrot13/templates/welcome.html
@@ -4,7 +4,9 @@
   <head>
     <title>Unit 2 Signup</title>
   </head>
-
+<!--12
+ we welcome the user by getting the username
+  -->
   <body>
     <h2>Welcome, {{username}}!</h2>
   </body>
